# Brumgilda

./: .env.example  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0002_add_age_and_avatar.py  0003_add_telegram_username.py  0ac8af8501e1_asd.py  5e150362c97d_asd.py  c1a68a61fac8_asd.py
src/: main.py
src/application/common/: exceptions.py
src/application/usecases/user/: __init__.py  complete_onboarding.py  get_user.py  patch_onboarding_draft.py  resolve_or_create_user_by_external_identity.py  search_users.py  update_user_profile.py
src/domain/directions/: __init__.py  entities.py  repository.py
src/domain/user/: draft_keys.py  enums.py  exceptions.py  repositories.py  user.py  value_objects.py
src/infra/: config.py  di.py
src/infra/database/: __init__.py  adapter.py  directions_seed.py  models.py
src/infra/database/repositories/: direction_repository.py  identity_repository.py  user_repository.py
src/presentation/bot/: avatar_utils.py  keyboards.py  middleware.py  onboarding_handlers.py  onboarding_prompts.py  onboarding_resume.py  profile_handlers.py  search_handlers.py  states.py
