[project]
name = "findteam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "aiogram>=3.26.0",
    "punq>=0.7.0",
    "sqlalchemy[asyncio]>=2.0.48",
]

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
